--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,12 @@
   <script src="assets/js/slick.min.js"></script>
   <script src="assets/js/jquery.nice-select.min.js"></script>
   <script src="assets/js/app.js"></script>
-</body>
+
+  <!-- SCRIPT PAYPAL -->
+  <!-- <script src="https://www.paypal.com/sdk/js?client-id=AVPwvCe3itcacxy0vHNiXwKmpdJeZNME7b-XqNR0Z48i9IspsXrZKFUMWi70AMAGC7H1LzAnLvOU2iQC&vault=true"></script> -->
+  <script src="https://www.paypal.com/sdk/js?client-id=AVPwvCe3itcacxy0vHNiXwKmpdJeZNME7b-XqNR0Z48i9IspsXrZKFUMWi70AMAGC7H1LzAnLvOU2iQC"></script>
+ 
+
+  </body>
 
 </html>
