--- a/src/index.html
+++ b/src/index.html
@@ -94,9 +94,10 @@
 
   <!-- SCRIPT PAYPAL -->
   <!-- <script src="https://www.paypal.com/sdk/js?client-id=AVPwvCe3itcacxy0vHNiXwKmpdJeZNME7b-XqNR0Z48i9IspsXrZKFUMWi70AMAGC7H1LzAnLvOU2iQC&vault=true"></script> -->
-  <script src="https://www.paypal.com/sdk/js?client-id=AVPwvCe3itcacxy0vHNiXwKmpdJeZNME7b-XqNR0Z48i9IspsXrZKFUMWi70AMAGC7H1LzAnLvOU2iQC"></script>
- 
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AVPwvCe3itcacxy0vHNiXwKmpdJeZNME7b-XqNR0Z48i9IspsXrZKFUMWi70AMAGC7H1LzAnLvOU2iQC"></script>
 
-  </body>
+
+</body>
 
 </html>
